Code documentation JH

--- a/API-currencydata.ipynb
+++ b/API-currencydata.ipynb
@@ -40,6 +40,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load sensitive configuration values from environment variables.\n",
+    "# This keeps credentials and connection details out of the codebase.\n",
     "ENDPOINT = os.environ['ENDPOINT']\n",
     "DB_NAME = os.environ['DB_NAME']\n",
     "USERNAME = os.environ['USERNAME']\n",
@@ -57,21 +59,27 @@
    "source": [
     "def fetch_currency_data(source_currency=\"CHF\", target_currencies=\"EUR\"):\n",
     "    \"\"\"Fetch live exchange rates with customizable source and target currencies\"\"\"\n",
+    "\n",
+    "    # Ensure API key is available\n",
     "    if not API_KEY:\n",
     "        return {\"error\": \"API key not found\"}\n",
     "\n",
+    "    # Build API request URL\n",
     "    base_url = \"https://api.apilayer.com/currency_data/\"\n",
     "    endpoint = \"live\"\n",
     "    api_url = f\"{base_url}{endpoint}?source={source_currency}&currencies={target_currencies}\"\n",
     "    headers = {\"apikey\": API_KEY}\n",
     "\n",
+    "    # Send request to currency API & return parsed JSON if successful, otherwise return error message\n",
     "    response = requests.get(api_url, headers=headers)\n",
     "    return response.json() if response.status_code == 200 else {\"error\": response.text}\n",
     "\n",
     "def store_currency_data_in_rds(currency_data):\n",
-    "    \"\"\"Store live exchange rates in RDS\"\"\"\n",
+    "    \"\"\"Store live exchange rates in an AWS RDS PostgreSQL database.\"\"\"\n",
     "    try:\n",
     "        print(\"Connecting to DB...\")\n",
+    "\n",
+    "        # Establish DB connection using psycopg2\n",
     "        conn = psycopg2.connect(\n",
     "            host=ENDPOINT,\n",
     "            dbname=DB_NAME,\n",
@@ -83,7 +91,7 @@
     "        print(\"DB connection successful.\")\n",
     "\n",
     "        # Define the table schema and columns\n",
-    "        table_name = \"currency_data\"\n",
+    "        table_name = \"tbl_currency_data\"\n",
     "        columns = {\n",
     "            \"timestamp\": \"TIMESTAMP NOT NULL\",\n",
     "            \"source_currency\": \"VARCHAR(10)\",\n",
@@ -95,17 +103,19 @@
     "        create_table_query = f\"CREATE TABLE IF NOT EXISTS {table_name} (\"\n",
     "        create_table_query += \", \".join([f\"{col} {datatype}\" for col, datatype in columns.items()])\n",
     "        create_table_query += \", PRIMARY KEY (timestamp, source_currency, target_currency));\"\n",
-    "\n",
     "        cur.execute(create_table_query)\n",
     "\n",
+    "        # Prepare INSERT statement with conflict handling\n",
     "        insert_query = f\"\"\"\n",
     "        INSERT INTO {table_name} ({', '.join(columns.keys())})\n",
     "        VALUES (%s, %s, %s, %s)\n",
     "        ON CONFLICT (timestamp, source_currency, target_currency) DO NOTHING;\n",
     "        \"\"\"\n",
     "\n",
-    "        now = datetime.now().strftime('%Y-%m-%d %H:%M:%S.%f')[:-3]  # Format to 'YYYY-MM-DD HH:MM:SS.mmm'\n",
+    "        # Get current timestamp in milliseconds (trimmed to 3 decimals)\n",
+    "        now = datetime.now().strftime('%Y-%m-%d %H:%M:%S.%f')[:-3]  \n",
     "\n",
+    "        # Parse currency pairs and insert them into the DB\n",
     "        for pair, rate in currency_data.get(\"quotes\", {}).items():\n",
     "            source_currency, target_currency = pair[:3], pair[3:]\n",
     "            cur.execute(\n",
@@ -113,6 +123,7 @@
     "                (now, source_currency, target_currency, rate)\n",
     "            )\n",
     "\n",
+    "        # Clean up DB connection\n",
     "        cur.close()\n",
     "        conn.close()\n",
     "\n",
@@ -131,13 +142,18 @@
     "\n",
     "def store_json_to_s3(currency_data):\n",
     "    \"\"\"Store the JSON data to S3 bucket in a structured way\"\"\"\n",
+    "    # Initialize S3 client\n",
     "    s3 = boto3.client('s3')\n",
+    "\n",
+    "    # Generate file key based on today's date\n",
     "    today = str(datetime.today().date())\n",
     "    foldername = \"currency_data\"\n",
     "    key = f\"{foldername}/{foldername}_{today}.json\"\n",
     "\n",
+    "    # Convert timestamps to ISO format\n",
     "    processed_data = preprocess_currency_data(currency_data)\n",
     "\n",
+    "    # Upload JSON to S3\n",
     "    s3.put_object(\n",
     "        Bucket=S3_BUCKET,\n",
     "        Key=key,\n",
@@ -148,18 +164,23 @@
     "def lambda_handler(event, context):\n",
     "    \"\"\"AWS Lambda Entry Point\"\"\"\n",
     "    \n",
-    "    # Fetch live data\n",
+    "    # Step 1: Fetch exchange rate data from external API\n",
     "    currency_data = fetch_currency_data()\n",
     "    \n",
+    "    # Step 2: Return early if fetch failed\n",
     "    if \"error\" in currency_data:\n",
     "        return {\n",
     "            \"statusCode\": 400,\n",
     "            \"body\": json.dumps({\"error\": currency_data[\"error\"]}, indent=2)\n",
     "        }\n",
     "    \n",
+    "    # Step 3: Store data in PostgreSQL RDS\n",
     "    store_currency_data_in_rds(currency_data)\n",
+    "\n",
+    "    # Step 4: Store JSON data in S3\n",
     "    store_json_to_s3(currency_data)\n",
     "\n",
+    "    # Step 5: Return success response\n",
     "    return {\n",
     "        \"statusCode\": 200,\n",
     "        \"body\": json.dumps({\n",
@@ -191,8 +212,51 @@
    },
    "outputs": [],
    "source": [
-    "def fetch_historical_currency_data(start_date=\"2024-04-25\", end_date=\"2025-04-25\", source_currency=\"CHF\", target_currencies=\"EUR\"):\n",
-    "    \"\"\"Fetch historical exchange rates between start_date and end_date\"\"\"\n",
+    "# ===================================================================================\n",
+    "# AWS Lambda Function: Historical Currency Data Pipeline\n",
+    "# Description: Fetches historical exchange rates from an external API and stores\n",
+    "#              the data in an RDS PostgreSQL database and in an S3 bucket as JSON.\n",
+    "# Technologies: AWS Lambda, S3, RDS (PostgreSQL), apilayer API\n",
+    "# Author: Joshua Hügli\n",
+    "# ===================================================================================\n",
+    "\n",
+    "import json\n",
+    "import requests\n",
+    "import psycopg2\n",
+    "import boto3\n",
+    "import os\n",
+    "from datetime import datetime\n",
+    "\n",
+    "# ------------------------------------------------------------------------------\n",
+    "# Environment Configuration\n",
+    "# Load sensitive configuration values from Lambda environment variables.\n",
+    "# ------------------------------------------------------------------------------\n",
+    "\n",
+    "ENDPOINT = os.environ['ENDPOINT']       # RDS database host\n",
+    "DB_NAME = os.environ['DB_NAME']         # Database name\n",
+    "USERNAME = os.environ['USERNAME']       # Database username\n",
+    "PASSWORD = os.environ['PASSWORD']       # Database password\n",
+    "S3_BUCKET = os.environ['S3_BUCKET']     # S3 bucket name for JSON export\n",
+    "API_KEY = os.environ['API_KEY']         # API key for currency data provider\n",
+    "\n",
+    "\n",
+    "# ------------------------------------------------------------------------------\n",
+    "# Fetch Historical Currency Data\n",
+    "# ------------------------------------------------------------------------------\n",
+    "\n",
+    "def fetch_historical_currency_data(start_date=\"2024-01-01\", end_date=\"2025-04-29\", source_currency=\"CHF\", target_currencies=\"EUR\"):\n",
+    "    \"\"\"\n",
+    "    Fetch historical exchange rate data from the apilayer API.\n",
+    "\n",
+    "    Args:\n",
+    "        start_date (str): Start date in YYYY-MM-DD format.\n",
+    "        end_date (str): End date in YYYY-MM-DD format.\n",
+    "        source_currency (str): The base currency (default: CHF).\n",
+    "        target_currencies (str): Comma-separated target currencies (default: EUR).\n",
+    "\n",
+    "    Returns:\n",
+    "        dict: JSON response with historical exchange rates or error message.\n",
+    "    \"\"\"\n",
     "    if not API_KEY:\n",
     "        return {\"error\": \"API key not found\"}\n",
     "\n",
@@ -204,8 +268,18 @@
     "    response = requests.get(url, headers=headers)\n",
     "    return response.json() if response.status_code == 200 else {\"error\": response.text}\n",
     "\n",
+    "\n",
+    "# ------------------------------------------------------------------------------\n",
+    "# Store Historical Currency Data in RDS\n",
+    "# ------------------------------------------------------------------------------\n",
+    "\n",
     "def store_historical_currency_data_in_rds(currency_data):\n",
-    "    \"\"\"Store historical exchange rates in RDS\"\"\"\n",
+    "    \"\"\"\n",
+    "    Store historical exchange rates in a PostgreSQL RDS instance.\n",
+    "\n",
+    "    Args:\n",
+    "        currency_data (dict): JSON object with exchange rates from API.\n",
+    "    \"\"\"\n",
     "    try:\n",
     "        print(\"Connecting to DB...\")\n",
     "        conn = psycopg2.connect(\n",
@@ -218,6 +292,7 @@
     "        conn.set_session(autocommit=True)\n",
     "        print(\"DB connection successful.\")\n",
     "\n",
+    "        # Define schema\n",
     "        table_name = \"tbl_currency_data\"\n",
     "        columns = {\n",
     "            \"timestamp\": \"TIMESTAMP NOT NULL\",\n",
@@ -232,20 +307,19 @@
     "        create_table_query += \", PRIMARY KEY (timestamp, source_currency, target_currency));\"\n",
     "        cur.execute(create_table_query)\n",
     "\n",
+    "        # Prepare INSERT statement\n",
     "        insert_query = f\"\"\"\n",
     "        INSERT INTO {table_name} ({', '.join(columns.keys())})\n",
     "        VALUES (%s, %s, %s, %s)\n",
     "        ON CONFLICT (timestamp, source_currency, target_currency) DO NOTHING;\n",
     "        \"\"\"\n",
     "\n",
+    "        # Insert all exchange rate records\n",
     "        for date_str, rates in currency_data.get(\"quotes\", {}).items():\n",
     "            for pair, rate in rates.items():\n",
     "                source_currency, target_currency = pair[:3], pair[3:]\n",
     "                timestamp = datetime.strptime(date_str, \"%Y-%m-%d\")\n",
-    "                cur.execute(\n",
-    "                    insert_query,\n",
-    "                    (timestamp, source_currency, target_currency, rate)\n",
-    "                )\n",
+    "                cur.execute(insert_query, (timestamp, source_currency, target_currency, rate))\n",
     "\n",
     "        cur.close()\n",
     "        conn.close()\n",
@@ -253,8 +327,20 @@
     "    except psycopg2.Error as e:\n",
     "        print(\"Database error:\", e)\n",
     "\n",
+    "\n",
+    "# ------------------------------------------------------------------------------\n",
+    "# Store JSON Data in S3\n",
+    "# ------------------------------------------------------------------------------\n",
+    "\n",
     "def store_json_to_s3(currency_data, start_date, end_date):\n",
-    "    \"\"\"Store the JSON data to S3 bucket in the same folder as live data\"\"\"\n",
+    "    \"\"\"\n",
+    "    Store the fetched historical currency data as a JSON file in an S3 bucket.\n",
+    "\n",
+    "    Args:\n",
+    "        currency_data (dict): JSON data from the API.\n",
+    "        start_date (str): Start date of the data range.\n",
+    "        end_date (str): End date of the data range.\n",
+    "    \"\"\"\n",
     "    s3 = boto3.client('s3')\n",
     "    foldername = \"currency_data\"\n",
     "    key = f\"{foldername}/currency_data_{start_date}_to_{end_date}.json\"\n",
@@ -266,10 +352,25 @@
     "        ContentType='application/json'\n",
     "    )\n",
     "\n",
+    "\n",
+    "# ------------------------------------------------------------------------------\n",
+    "# AWS Lambda Entry Point\n",
+    "# ------------------------------------------------------------------------------\n",
+    "\n",
     "def lambda_handler(event, context):\n",
-    "    \"\"\"AWS Lambda Entry Point for historical data\"\"\"\n",
-    "    start_date = event.get(\"start_date\", \"2024-04-25\")\n",
-    "    end_date = event.get(\"end_date\", \"2025-04-25\")\n",
+    "    \"\"\"\n",
+    "    Lambda function entry point for fetching and storing historical currency data.\n",
+    "\n",
+    "    Args:\n",
+    "        event (dict): Event payload with optional 'start_date' and 'end_date'.\n",
+    "        context (LambdaContext): Runtime information.\n",
+    "\n",
+    "    Returns:\n",
+    "        dict: HTTP-style status and message with S3 path reference.\n",
+    "    \"\"\"\n",
+    "    # Default values if not provided in event\n",
+    "    start_date = event.get(\"start_date\", \"2025-05-22\")\n",
+    "    end_date = event.get(\"end_date\", \"2025-05-23\")\n",
     "\n",
     "    currency_data = fetch_historical_currency_data(start_date=start_date, end_date=end_date)\n",
     "\n",
