Code documentation JH

--- a/DL_DWH_energy_trade_data.ipynb
+++ b/DL_DWH_energy_trade_data.ipynb
@@ -5,7 +5,7 @@
    "id": "920ec42c",
    "metadata": {},
    "source": [
-    "# Currency data API's"
+    "# DWH fact_energy_trade"
    ]
   },
   {
@@ -13,9 +13,9 @@
    "id": "0e1c22f9",
    "metadata": {},
    "source": [
-    "## Live Data extraction\n",
+    "## Energy trade table creation\n",
     "\n",
-    "Lambda layer: group2_currency_api"
+    "Lambda layer: group2_dwh_fact_energy_trade"
    ]
   },
   {
@@ -25,14 +25,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import json\n",
     "import requests\n",
     "import pandas as pd\n",
-    "import json\n",
-    "from datetime import date, datetime, timedelta\n",
     "import psycopg2\n",
     "from psycopg2.extras import execute_values\n",
-    "import boto3\n",
-    "import os"
+    "from datetime import date, datetime, timedelta"
    ]
   },
   {
@@ -42,7 +41,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load environment variables\n",
+    "# ------------------------------------------------------------------------------\n",
+    "# Configuration: Load environment variables for database access\n",
+    "# ------------------------------------------------------------------------------\n",
+    "\n",
     "DB_CONFIG_DATALAKE = {\n",
     "    \"host\": os.getenv(\"var_host\"),\n",
     "    \"port\": os.getenv(\"var_port\"),\n",
@@ -68,169 +70,172 @@
    "outputs": [],
    "source": [
     "def lambda_handler(event, context):\n",
+    "    \"\"\"\n",
+    "    AWS Lambda function to extract, transform, and load hourly energy trade data\n",
+    "    from a Datalake to a DWH (fact_energy_trade). It processes data for one day (2 days ago),\n",
+    "    enriches it with currency rates, energy prices, and dimension lookups, and loads\n",
+    "    it into the fact table.\n",
+    "\n",
+    "    Args:\n",
+    "        event (dict): Lambda event payload.\n",
+    "        context (LambdaContext): Lambda context object.\n",
+    "\n",
+    "    Returns:\n",
+    "        dict: Status message and number of inserted rows or error message.\n",
+    "    \"\"\"\n",
     "    try:\n",
-    "        # Setup date window (1 day ago)\n",
-    "        trade_day = date.today() - timedelta(days=1)\n",
-    "        start_time = datetime.combine(trade_day, datetime.min.time())\n",
-    "        end_time = start_time + timedelta(days=1)\n",
+    "        for days_ago in range(2, 3):  # Loop allows extension to more days if needed\n",
+    "            trade_day = date.today() - timedelta(days=days_ago)\n",
+    "            start_time = datetime.combine(trade_day, datetime.min.time())\n",
+    "            end_time = start_time + timedelta(days=1)\n",
     "\n",
-    "        # Connect to source and target databases\n",
-    "        conn_src = psycopg2.connect(**DB_CONFIG_DATALAKE)\n",
-    "        conn_tgt = psycopg2.connect(**DB_CONFIG_DWH)\n",
-    "        cur_tgt = conn_tgt.cursor()\n",
+    "            # ------------------------------------------------------------------\n",
+    "            # Connect to source (Datalake) and target (DWH) databases\n",
+    "            # ------------------------------------------------------------------\n",
+    "            conn_src = psycopg2.connect(**DB_CONFIG_DATALAKE)\n",
+    "            conn_tgt = psycopg2.connect(**DB_CONFIG_DWH)\n",
+    "            cur_tgt = conn_tgt.cursor()\n",
     "\n",
-    "        # Ensure fact_energy_trade table exists\n",
-    "        cur_tgt.execute(\"\"\"\n",
-    "        CREATE TABLE IF NOT EXISTS fact_energy_trade (\n",
-    "            trade_id BIGINT PRIMARY KEY,\n",
-    "            time_id INT,\n",
-    "            origin_country_id INT,\n",
-    "            neighbor_country_id INT,\n",
-    "            direction TEXT,\n",
-    "            energy_value_gw FLOAT,\n",
-    "            exchange_rate FLOAT,\n",
-    "            value_eur FLOAT,\n",
-    "            value_chf FLOAT\n",
-    "        );\n",
-    "        \"\"\")\n",
-    "        conn_tgt.commit()\n",
+    "            # ------------------------------------------------------------------\n",
+    "            # Ensure target table exists\n",
+    "            # ------------------------------------------------------------------\n",
+    "            cur_tgt.execute(\"\"\"\n",
+    "            CREATE TABLE IF NOT EXISTS fact_energy_trade (\n",
+    "                trade_id BIGINT PRIMARY KEY,\n",
+    "                time_id INT,\n",
+    "                origin_country_id INT,\n",
+    "                neighbor_country_id INT,\n",
+    "                direction TEXT,\n",
+    "                energy_value_gw FLOAT,\n",
+    "                exchange_rate FLOAT,\n",
+    "                value_eur FLOAT,\n",
+    "                value_chf FLOAT,\n",
+    "                UNIQUE(time_id, neighbor_country_id)\n",
+    "            );\n",
+    "            \"\"\")\n",
+    "            conn_tgt.commit()\n",
     "\n",
-    "        # 1) Load and aggregate hourly energy CBET data\n",
-    "        sql_energy = f\"\"\"\n",
-    "        SELECT\n",
-    "        date_trunc('hour', timestamp) AS hour,\n",
-    "        country,\n",
-    "        SUM(value) AS energy_sum_gw\n",
-    "        FROM tbl_energy_cbet_data\n",
-    "        WHERE timestamp >= '{start_time}' AND timestamp < '{end_time}'\n",
-    "        GROUP BY 1,2\n",
-    "        ORDER BY 1,2\n",
-    "        ;\n",
-    "        \"\"\"\n",
-    "        df_energy = pd.read_sql_query(sql_energy, conn_src)\n",
-    "        # drop aggregate \"sum\" rows that aren’t actual countries\n",
-    "        df_energy = df_energy[df_energy['country'].str.strip().str.lower() != 'sum']\n",
+    "            # ------------------------------------------------------------------\n",
+    "            # Step 1: Load and aggregate hourly CBET energy data\n",
+    "            # ------------------------------------------------------------------\n",
+    "            sql_energy = f\"\"\"\n",
+    "            SELECT\n",
+    "                date_trunc('hour', timestamp) AS hour,\n",
+    "                country,\n",
+    "                SUM(value) AS energy_sum_gw\n",
+    "            FROM tbl_energy_cbet_data\n",
+    "            WHERE timestamp >= '{start_time}' AND timestamp < '{end_time}'\n",
+    "            GROUP BY 1, 2\n",
+    "            ORDER BY 1, 2;\n",
+    "            \"\"\"\n",
+    "            df_energy = pd.read_sql_query(sql_energy, conn_src)\n",
+    "            df_energy = df_energy[df_energy['country'].str.strip().str.lower() != 'sum']\n",
     "\n",
-    "        # 2) Load daily currency rates\n",
-    "        sql_currency = f\"\"\"\n",
-    "        SELECT\n",
-    "        DATE(timestamp) AS rate_date,\n",
-    "        exchange_rate\n",
-    "        FROM tbl_currency_data\n",
-    "        WHERE source_currency='CHF' \n",
-    "            AND target_currency='EUR'\n",
-    "        ;\n",
-    "        \"\"\"\n",
-    "        df_curr = pd.read_sql_query(sql_currency, conn_src)\n",
-    "        # ensure one rate per day to avoid duplicate merges\n",
-    "        df_curr = df_curr.drop_duplicates(subset=['rate_date'])\n",
+    "            # ------------------------------------------------------------------\n",
+    "            # Step 2: Load daily CHF to EUR exchange rates\n",
+    "            # ------------------------------------------------------------------\n",
+    "            sql_currency = \"\"\"\n",
+    "            SELECT\n",
+    "                DATE(timestamp) AS rate_date,\n",
+    "                exchange_rate\n",
+    "            FROM tbl_currency_data\n",
+    "            WHERE source_currency='CHF' AND target_currency='EUR';\n",
+    "            \"\"\"\n",
+    "            df_curr = pd.read_sql_query(sql_currency, conn_src)\n",
+    "            df_curr = df_curr.drop_duplicates(subset=['rate_date'])\n",
     "\n",
-    "        # 3) Prepare energy dataframe\n",
-    "        df_energy['direction'] = df_energy['energy_sum_gw'].apply(\n",
-    "            lambda x: 'import' if x>0 else ('export' if x<0 else 'none')\n",
-    "        )\n",
-    "        df_energy['energy_value_gw'] = df_energy['energy_sum_gw'].abs()\n",
-    "        df_energy['rate_date'] = pd.to_datetime(df_energy['hour']).dt.date\n",
+    "            # ------------------------------------------------------------------\n",
+    "            # Step 3: Prepare energy dataframe with calculated fields\n",
+    "            # ------------------------------------------------------------------\n",
+    "            df_energy['direction'] = df_energy['energy_sum_gw'].apply(\n",
+    "                lambda x: 'import' if x > 0 else ('export' if x < 0 else 'none')\n",
+    "            )\n",
+    "            df_energy['energy_value_gw'] = df_energy['energy_sum_gw'].abs()\n",
+    "            df_energy['rate_date'] = pd.to_datetime(df_energy['hour']).dt.date\n",
     "\n",
-    "        # merge exchange rate\n",
-    "        df_energy = df_energy.merge(\n",
-    "            df_curr,\n",
-    "            left_on='rate_date', right_on='rate_date',\n",
-    "            how='left'\n",
-    "        )\n",
+    "            df_energy = df_energy.merge(df_curr, on='rate_date', how='left')\n",
     "\n",
-    "        # 4) Map foreign keys\n",
-    "        # origin_country_id always Switzerland = 6, still add column for potential scalability\n",
-    "        df_energy['origin_country_id'] = 6\n",
+    "            # Set fixed origin_country_id (Switzerland = 6)\n",
+    "            df_energy['origin_country_id'] = 6\n",
     "\n",
-    "        # Fetch dim_countries for neighbor_country_id\n",
-    "        sql_country = \"SELECT country_id, country_name_en FROM dim_countries;\"\n",
-    "        df_country = pd.read_sql_query(sql_country, conn_tgt)\n",
-    "        df_energy = df_energy.merge(\n",
-    "            df_country,\n",
-    "            left_on='country', right_on='country_name_en',\n",
-    "            how='left'\n",
-    "        )\n",
-    "        df_energy.rename(columns={'country_id':'neighbor_country_id'}, inplace=True)\n",
+    "            # ------------------------------------------------------------------\n",
+    "            # Step 4: Map foreign keys using dimension tables\n",
+    "            # ------------------------------------------------------------------\n",
     "\n",
-    "        # Fetch dim_time for time_id\n",
-    "        sql_time = \"SELECT time_id, timestamp_utc FROM dim_time;\"\n",
-    "        df_time = pd.read_sql_query(sql_time, conn_tgt)\n",
-    "        df_time['timestamp_utc'] = pd.to_datetime(df_time['timestamp_utc'])\n",
+    "            # Map country names to country IDs\n",
+    "            sql_country = \"SELECT country_id, country_name_en FROM dim_countries;\"\n",
+    "            df_country = pd.read_sql_query(sql_country, conn_tgt)\n",
+    "            df_energy = df_energy.merge(df_country, left_on='country', right_on='country_name_en', how='left')\n",
+    "            df_energy.rename(columns={'country_id': 'neighbor_country_id'}, inplace=True)\n",
     "\n",
-    "        df_energy = df_energy.merge(\n",
-    "            df_time,\n",
-    "            left_on='hour', right_on='timestamp_utc',\n",
-    "            how='left'\n",
-    "        )\n",
+    "            # Map timestamps to time IDs\n",
+    "            sql_time = \"SELECT time_id, timestamp_utc FROM dim_time;\"\n",
+    "            df_time = pd.read_sql_query(sql_time, conn_tgt)\n",
+    "            df_time['timestamp_utc'] = pd.to_datetime(df_time['timestamp_utc'])\n",
+    "            df_energy = df_energy.merge(df_time, left_on='hour', right_on='timestamp_utc', how='left')\n",
     "\n",
-    "        # 5) Lookup hourly energy prices and calculate value in EUR\n",
-    "        sql_price = f\"\"\"\n",
-    "        SELECT\n",
-    "        date_trunc('hour', timestamp) AS hour,\n",
-    "        price\n",
-    "        FROM tbl_energy_price_data\n",
-    "        WHERE timestamp >= '{start_time}' AND timestamp < '{end_time}'\n",
-    "        ;\n",
-    "        \"\"\"\n",
-    "        df_price = pd.read_sql_query(sql_price, conn_src)\n",
-    "        # ensure one price per hour to avoid duplicate merges\n",
-    "        df_price = df_price.drop_duplicates(subset=['hour'])\n",
-    "        df_price['hour'] = pd.to_datetime(df_price['hour']).dt.floor('H')\n",
-    "        df_price.rename(columns={'price':'price_eur_mwh'}, inplace=True)\n",
-    "        \n",
+    "            # ------------------------------------------------------------------\n",
+    "            # Step 5: Load hourly energy prices and calculate trade values\n",
+    "            # ------------------------------------------------------------------\n",
+    "            sql_price = f\"\"\"\n",
+    "            SELECT\n",
+    "                date_trunc('hour', timestamp) AS hour,\n",
+    "                price\n",
+    "            FROM tbl_energy_price_data\n",
+    "            WHERE timestamp >= '{start_time}' AND timestamp < '{end_time}';\n",
+    "            \"\"\"\n",
+    "            df_price = pd.read_sql_query(sql_price, conn_src)\n",
+    "            df_price = df_price.drop_duplicates(subset=['hour'])\n",
+    "            df_price['hour'] = pd.to_datetime(df_price['hour']).dt.floor('H')\n",
+    "            df_price.rename(columns={'price': 'price_eur_mwh'}, inplace=True)\n",
     "\n",
-    "        # merge hourly prices\n",
-    "        df_energy = df_energy.merge(\n",
-    "            df_price[['hour','price_eur_mwh']],\n",
-    "            on='hour', how='left'\n",
-    "        )\n",
+    "            df_energy = df_energy.merge(df_price[['hour', 'price_eur_mwh']], on='hour', how='left')\n",
     "\n",
-    "        # calculate value in EUR: price (EUR/MWh) * 1000 * energy_value_gw / exchange_rate (CHF-EUR)\n",
-    "        df_energy['value_eur'] = df_energy['price_eur_mwh'] * 1000 * df_energy['energy_value_gw']\n",
-    "        df_energy['value_chf'] = df_energy['value_eur'] / df_energy['exchange_rate']\n",
-    "        df_energy['value_eur'] = df_energy['value_eur'].round(2)\n",
-    "        df_energy['value_chf'] = df_energy['value_chf'].round(2)\n",
+    "            # Calculate monetary values\n",
+    "            df_energy['value_eur'] = df_energy['price_eur_mwh'] * 1000 * df_energy['energy_value_gw']\n",
+    "            df_energy['value_chf'] = df_energy['value_eur'] / df_energy['exchange_rate']\n",
+    "            df_energy['value_eur'] = df_energy['value_eur'].round(2)\n",
+    "            df_energy['value_chf'] = df_energy['value_chf'].round(2)\n",
     "\n",
-    "        # 6) Generate trade_id starting after current max\n",
-    "        cur_tgt.execute(\"SELECT COALESCE(MAX(trade_id),0) FROM fact_energy_trade;\")\n",
-    "        max_id = cur_tgt.fetchone()[0]\n",
-    "        df_energy = df_energy.sort_values(['hour','neighbor_country_id'])\n",
-    "        df_energy['trade_id'] = range(max_id+1, max_id+1+len(df_energy))\n",
+    "            # ------------------------------------------------------------------\n",
+    "            # Step 6: Generate trade_id and sort\n",
+    "            # ------------------------------------------------------------------\n",
+    "            cur_tgt.execute(\"SELECT COALESCE(MAX(trade_id), 0) FROM fact_energy_trade;\")\n",
+    "            max_id = cur_tgt.fetchone()[0]\n",
+    "            df_energy = df_energy.sort_values(['hour', 'neighbor_country_id'])\n",
+    "            df_energy['trade_id'] = range(max_id + 1, max_id + 1 + len(df_energy))\n",
     "\n",
-    "        # 7) Build insert records\n",
-    "        records = df_energy[['trade_id','time_id','origin_country_id',\n",
-    "                            'neighbor_country_id','direction',\n",
-    "                            'energy_value_gw','exchange_rate','value_eur','value_chf']].values.tolist()\n",
+    "            # ------------------------------------------------------------------\n",
+    "            # Step 7: Prepare and insert records into fact table\n",
+    "            # ------------------------------------------------------------------\n",
+    "            insert_sql = \"\"\"\n",
+    "            INSERT INTO fact_energy_trade\n",
+    "                (trade_id, time_id, origin_country_id, neighbor_country_id,\n",
+    "                 direction, energy_value_gw, exchange_rate, value_eur, value_chf)\n",
+    "            VALUES %s\n",
+    "            \"\"\"\n",
     "\n",
-    "            # Batch insert (convert numpy types to native Python types)\n",
-    "        insert_sql = (\"INSERT INTO fact_energy_trade \"\n",
-    "            \"(trade_id, time_id, origin_country_id, neighbor_country_id, direction, energy_value_gw, exchange_rate, value_eur, value_chf) \"\n",
-    "            \"VALUES %s\"\n",
-    "        )\n",
-    "        # Convert to list of tuples\n",
-    "        records = df_energy[['trade_id','time_id','origin_country_id',\n",
-    "                            'neighbor_country_id','direction',\n",
-    "                            'energy_value_gw','exchange_rate','value_eur','value_chf']].values.tolist()\n",
-    "        # Ensure each value is a Python scalar\n",
-    "        clean_records = []\n",
-    "        for row in records:\n",
-    "            clean_row = []\n",
-    "            for v in row:\n",
-    "                # numpy types: use item(), else keep\n",
-    "                clean_row.append(v.item() if hasattr(v, 'item') else v)\n",
-    "            clean_records.append(tuple(clean_row))\n",
+    "            # Prepare clean records with native Python types\n",
+    "            records = df_energy[['trade_id', 'time_id', 'origin_country_id',\n",
+    "                                 'neighbor_country_id', 'direction',\n",
+    "                                 'energy_value_gw', 'exchange_rate', 'value_eur', 'value_chf']].values.tolist()\n",
     "\n",
-    "        execute_values(cur_tgt, insert_sql, clean_records)\n",
-    "        conn_tgt.commit()\n",
+    "            clean_records = [\n",
+    "                tuple(v.item() if hasattr(v, 'item') else v for v in row)\n",
+    "                for row in records\n",
+    "            ]\n",
     "\n",
-    "        # Close connections\n",
-    "        cur_tgt.close()\n",
-    "        conn_src.close()\n",
-    "        conn_tgt.close()\n",
+    "            execute_values(cur_tgt, insert_sql, clean_records)\n",
+    "            conn_tgt.commit()\n",
     "\n",
-    "        return { 'status':'success', 'rows_inserted': len(clean_records) }\n",
+    "            # ------------------------------------------------------------------\n",
+    "            # Cleanup: Close DB connections\n",
+    "            # ------------------------------------------------------------------\n",
+    "            cur_tgt.close()\n",
+    "            conn_src.close()\n",
+    "            conn_tgt.close()\n",
     "\n",
+    "        return {'status': 'success', 'rows_inserted': len(clean_records)}\n",
     "\n",
     "    except Exception as e:\n",
     "        return {\n",
